manifests/armexporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: arm-exporter
  name: arm-exporter
  namespace: monitoring
spec:
  ports:
  - name: https
    port: 9243
    targetPort: https
  selector:
    k8s-app: arm-exporter
