manifests/ingress-alertmanager.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alertmanager.192.168.1.143.nip.io`)
      priority: 10
      services:
        - name: alertmanager-main
          port: 9093

  tls:
    certResolver: default
    options: {}
