manifests/ingress-grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.192.168.1.143.nip.io`)
      priority: 10
      services:
        - name: grafana
          port: 3000

  tls:
    certResolver: default
    options: {}
