manifests/ingress-prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.192.168.1.143.nip.io`)
      priority: 10
      services:
        - name: prometheus-k8s
          port: 9090

  tls:
    certResolver: default
    options: {}
